docs/versions/4.22/groups/M6.md
---
layout: group
group_id: M6
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

This remediation configures audit rules to monitor system time modifications, which are critical for maintaining accurate audit logs and detecting tampering.

## Settings

| Rule | Description |
|------|-------------|
| `adjtimex` | Audit fine-grained time adjustments |
| `clock_settime` | Audit clock setting operations |
| `settimeofday` | Audit time-of-day changes |
| `stime` | Audit legacy time setting |
| `/etc/localtime` | Watch for localtime file changes |

## Implementation

```yaml
apiVersion: machineconfiguration.openshift.io/v1
kind: MachineConfig
metadata:
  name: 75-audit-time-medium
  labels:
    machineconfiguration.openshift.io/role: master
spec:
  config:
    ignition:
      version: 3.2.0
    storage:
      files:
        - path: /etc/audit/rules.d/75-time-change.rules
          mode: 0644
          overwrite: true
          contents:
            inline: |
              ## Time change monitoring
              -a always,exit -F arch=b64 -S adjtimex -S settimeofday -k time-change
              -a always,exit -F arch=b32 -S adjtimex -S settimeofday -S stime -k time-change
              -a always,exit -F arch=b64 -S clock_settime -k time-change
              -a always,exit -F arch=b32 -S clock_settime -k time-change
              -w /etc/localtime -p wa -k time-change
```

## Compliance Checks Remediated

| Check | Profile | Docs |
|-------|---------|------|
| `rhcos4-e8-worker-audit-rules-time-adjtimex` | E8 | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_rules_time_adjtimex) |
| `rhcos4-e8-worker-audit-rules-time-clock-settime` | E8 | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_rules_time_clock_settime) |
| `rhcos4-e8-worker-audit-rules-time-settimeofday` | E8 | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_rules_time_settimeofday) |
| `rhcos4-e8-worker-audit-rules-time-stime` | E8 | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_rules_time_stime) |
| `rhcos4-e8-worker-audit-rules-time-watch-localtime` | E8 | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_rules_time_watch_localtime) |

<div class="source-files">
<h4>Source Remediation Files (5)</h4>
<ul>
<li>medium/rhcos4-e8-worker-audit-rules-time-adjtimex.yaml</li>
<li>medium/rhcos4-e8-worker-audit-rules-time-clock-settime.yaml</li>
<li>medium/rhcos4-e8-worker-audit-rules-time-settimeofday.yaml</li>
<li>medium/rhcos4-e8-worker-audit-rules-time-stime.yaml</li>
<li>medium/rhcos4-e8-worker-audit-rules-time-watch-localtime.yaml</li>
</ul>
</div>

## Security Impact

Time modification auditing is critical because:
- Attackers may alter time to invalidate security certificates
- Time changes can corrupt audit log sequencing
- Accurate timestamps are essential for forensic analysis
